ts-ui-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ui-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: ts-ui-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ts-ui-server
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: ts-ui-server-env
          image: docker.io/devpatterns/stream_view:efb96700d72b4feb2809716b45532437edd45596
          imagePullPolicy: Always
          name: ts-ui-server
          ports:
            - containerPort: 8050
              protocol: TCP
      imagePullSecrets:
        - name: dockerhub-credentials
      restartPolicy: Always
