ts_ui_server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-ui-server
spec:
  ports:
    - name: "8050"
      port: 8050
      targetPort: 8050
  selector:
    app.kubernetes.io/name: ts-ui-server
