ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-ui-ingress
  # The Nginx SSL annotation has been removed as it is no longer applicable
spec:
  ingressClassName: traefik-infrastructure  # <-- UPDATED: Now targeting Traefik instead of Nginx
  rules:
    - host: ts-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ts-ui-server
                port:
                  number: 8050
